# deno-examples

./: README.md
cli/: README.md  shebang.ts
cli/bundle/: Makefile  README.md  index.js
cli/bundle-ts/: Makefile  README.md
cli/bundle-with-jsr-deps/: deno.json  main.js
cli/bundle-with-npm-pkgs/: Makefile  deno.json  main.js
cli/fs/: app.js
cli/imports/: hello.js  world.js
cli/passing-args/: main.js
embeded/: Cargo.toml  README.md
embeded/crates/deno-utils/: Cargo.toml  build.rs
embeded/crates/deno-utils/src/: lib.rs
embeded/crates/libdeno/: Cargo.toml  build.rs
embeded/crates/libdeno/src/: lib.rs
embeded/crates/libdeno/src/x/: mod.rs  runtime.rs  url.rs
embeded/examples-core-extension/op-state/: README.md
embeded/examples-core-extension/op-state/cli/: Cargo.toml
embeded/examples-core-extension/op-state/cli/src/: main.rs
embeded/examples-core-extension/op-state/cli/static/: app.js
embeded/examples-core-extension/op-state/ext/: Cargo.toml  README.md
embeded/examples-core-extension/op-state/ext/src/: lib.rs  store.js
embeded/examples-core-extension/pass-v8-args/: README.md
embeded/examples-core-extension/pass-v8-args/cli/: Cargo.toml
embeded/examples-core-extension/pass-v8-args/cli/src/: main.rs
embeded/examples-core-extension/pass-v8-args/cli/static/: app.js
embeded/examples-core-extension/pass-v8-args/ext/: Cargo.toml
embeded/examples-core-extension/pass-v8-args/ext/src/: hello_world.js  lib.rs
embeded/examples-core-extension/quickstart/: README.md
embeded/examples-core-extension/quickstart-async/cli/: Cargo.toml
embeded/examples-core-extension/quickstart-async/cli/static/: app.js
embeded/examples-core-extension/quickstart-async/ext/: Cargo.toml
embeded/examples-core-extension/quickstart-async/ext/src/: hello_world.js  lib.rs
embeded/examples-core-extension/quickstart/cli/: Cargo.toml  build.rs
embeded/examples-core-extension/quickstart/cli/src/: main.rs
embeded/examples-core-extension/quickstart/cli/static/: app.js
embeded/examples-core-extension/quickstart/ext/: Cargo.toml
embeded/examples-core-extension/quickstart/ext/src/: hello_world.js  lib.rs
embeded/examples-core/call-fn/: Cargo.toml
embeded/examples-core/call-fn/src/: main.rs
embeded/examples-core/call-fn/static/: app.js
embeded/examples-core/hello-world/: Cargo.toml
embeded/examples-core/hello-world/src/: main.rs
embeded/examples-core/hello-world/static/: app.js
embeded/examples-core/load-code-from-mem/: Cargo.toml
embeded/examples-core/load-code-from-mem/src/: main.rs
embeded/examples-core/multi-threads/: Cargo.toml
embeded/examples-core/multi-threads/src/: main.rs
embeded/examples-core/multi-threads/static/: app.js
embeded/examples-extension/quickstart/cli/: Cargo.toml  build.rs
embeded/examples-extension/quickstart/cli/src/: main.rs
embeded/examples-extension/quickstart/cli/static/: app.js
embeded/examples-extension/quickstart/ext/: Cargo.toml  hello_world.js
embeded/examples-extension/quickstart/ext/src/: lib.rs
embeded/examples/call-async-fn/: Cargo.toml  README.md
embeded/examples/call-async-fn/src/: main.rs
embeded/examples/call-async-fn/static/: app.js
embeded/examples/call-fn/: Cargo.toml
embeded/examples/call-fn/src/: main.rs
embeded/examples/call-fn/static/: app.js
embeded/examples/hello-world/: Cargo.toml
embeded/examples/hello-world-async/: Cargo.toml
embeded/examples/hello-world-async/src/: main.rs
embeded/examples/hello-world-async/static/: app.js
embeded/examples/hello-world/src/: main.rs
