[workspace]
members = [
  "crates/*",
  "examples-core-extension/*/*",
  "examples-core/*",
  "examples-extension/*/*",
  "examples/*",
#  "examples/extension-quickstart/greeter-ext",
]

resolver = "3"

[workspace.dependencies]
deno_core = "0.352"
deno_error = "0.6"

[workspace.dependencies.clap]
features = ["derive"]
version = "4"

[workspace.dependencies.libdeno]
path = "crates/libdeno"

[workspace.dependencies.tokio]
features = ["full"]
version = "1.45"

#[patch.crates-io]
#deno_core.path = "/github.com/denoland/deno_core/core"
