[package]
name = "libdeno"
version = "0.1.0"
edition = "2024"

[build-dependencies.deno_runtime]
version = "0.217"
features = ["snapshot", "transpile"]

[dependencies]
deno_core.workspace = true
deno_resolver = "0.40"
deno_error.workspace = true

[dependencies.deno_runtime]
# deno 的 ext 包含 typescript 源码，依赖 transpile 特性将其转义为 javascript。否则 JSRuntime 会报错。
features = ["snapshot", "transpile"]
version = "0.217"

[dependencies.sys_traits]
version = "0.1"
features = ["getrandom", "filetime", "libc", "real"]
